<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketPriceMainActivity">

    <TextView
        android:id="@+id/ticketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/ticket_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ticket_price_input" />

    <EditText
        android:id="@+id/ticket_price_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_ticket_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ticketPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/discount_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ticketPrice"
        app:layout_constraintTop_toBottomOf="@+id/ticket_price_input" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/discountTextView"
        app:layout_constraintTop_toTopOf="@+id/discountTextView">

        <RadioButton
            android:id="@+id/radio_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five_percent"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_percent"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percent"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fifty_percent"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/discountedPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/discounted_price_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/discountTextView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/discounted_price_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/zero_dollars"
        app:layout_constraintStart_toEndOf="@+id/discountedPriceTextView"
        app:layout_constraintTop_toTopOf="@+id/discountedPriceTextView" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discounted_price_output" />

    <Button
        android:id="@+id/clear_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button_text"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>